# slimes

./: Cargo.toml  flake.nix
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/: benchmark.rs  lib.rs  main.rs  slimes.rs
