[package]
name = "slimes"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
cpal = {version = "0.17.3", default-features = false}
display-info = "0.5.9"
mac_address = "1.1.8"
num_cpus = "1.17.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
uuid = { version = "1.22.0", features = ["v4"] }
