[package]
name = "slimes-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# slimes = { version = "1.0.0", path = ".." }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "postgres"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
